created basic talker/listener node and package

--- a/franka_ros2/hts_robotics/CMakeLists.txt
+++ b/franka_ros2/hts_robotics/CMakeLists.txt
@@ -8,6 +8,16 @@ option(CMAKE_EXPORT_COMPILE_COMMANDS "Enable compile commands export" OFF)
 project(hts_robotics)
 
 find_package(ament_cmake REQUIRED)
+find_package(rclcpp REQUIRED)
+find_package(std_msgs REQUIRED)
+
+add_executable(hts_node src/hts_main.cpp)
+target_link_libraries(hts_node PUBLIC rclcpp::rclcpp ${std_msgs_TARGETS})
+
+install(TARGETS 
+  hts_node
+  DESTINATION lib/${PROJECT_NAME}
+)
 
 # Install project launch files
 install(
@@ -15,6 +25,7 @@ install(
     launch config
   DESTINATION share/${PROJECT_NAME}
 )
+
 
 if(BUILD_TESTING)
   find_package(ament_lint_auto REQUIRED)
