--- a/franka_ros2/hts_robotics/package.xml
+++ b/franka_ros2/hts_robotics/package.xml
@@ -15,6 +15,8 @@
   <depend>rclcpp</depend>
   <depend>std_msgs</depend>
   <depend>moveit_ros_planning_interface</depend>
+  <depend>geometry_msgs</depend>
+  <depend>sensor_msgs</depend>
 
   <exec_depend>franka_hardware</exec_depend>
   <exec_depend>franka_gripper</exec_depend>
