gazebo and moveit talk to each other

--- a/franka_ros2/Dockerfile
+++ b/franka_ros2/Dockerfile
@@ -63,6 +63,8 @@ RUN sudo apt-get update \
         ros-humble-realtime-tools \
         ros-humble-joint-state-publisher \
         ros-humble-joint-state-broadcaster \
+        ros-humble-moveit \
+        ros-humble-moveit-setup-assistant \
         ros-humble-moveit-ros-move-group \
         ros-humble-moveit-kinematics \
         ros-humble-moveit-planners-ompl \
