--- a/franka_ros2/hts_robotics/package.xml
+++ b/franka_ros2/hts_robotics/package.xml
@@ -17,6 +17,10 @@
   <depend>moveit_ros_planning_interface</depend>
   <depend>geometry_msgs</depend>
   <depend>sensor_msgs</depend>
+  <depend>rosidl_default_generators</depend>
+  <depend>rosidl_default_runtime</depend>
+
+  <member_of_group>rosidl_interface_packages</member_of_group>
 
   <exec_depend>franka_hardware</exec_depend>
   <exec_depend>franka_gripper</exec_depend>
