--- a/franka_ros2/hts_robotics/config/controllers.yaml
+++ b/franka_ros2/hts_robotics/config/controllers.yaml
@@ -25,6 +25,7 @@ fr3_arm_controller:
     gazebo: true
     command_interfaces:
       - effort
+      - position
     state_interfaces:
       - position
       - velocity
