--- a/franka_ros2/docker-compose.yml
+++ b/franka_ros2/docker-compose.yml
@@ -8,6 +8,7 @@ services:
         - USER_GID=${USER_GID}
     container_name: franka_ros2
     network_mode: "host"
+    mac_address: 02:42:ac:11:00:FF
     privileged: true
     command: /bin/bash
     tty: true
@@ -17,6 +18,8 @@ services:
       - /tmp/.X11-unix:/tmp/.X11-unix
       - ./limits.conf:/etc/security/limits.conf
       - /dev:/dev
+      - /etc/machine-id:/etc/machine-id:ro
+
     environment:
       QT_X11_NO_MITSHM: 1
       DISPLAY: $DISPLAY
