fix base not connected

--- a/franka_ros2/hts_robotics/config/controllers.yaml
+++ b/franka_ros2/hts_robotics/config/controllers.yaml
@@ -24,7 +24,7 @@ fr3_arm_controller:
     type: joint_trajectory_controller/JointTrajectoryController
     gazebo: true
     command_interfaces:
-      - effort
+      - position
     state_interfaces:
       - position
       - velocity
