set up dockerfile for anygrasp

--- a/franka_ros2/Dockerfile
+++ b/franka_ros2/Dockerfile
@@ -13,7 +13,7 @@ ARG USERNAME=user
 
 # Install essential packages and ROS development tools
 RUN apt-get update && \
-        # python3-pip \
+    # python3-pip \
     # && python3 -m pip install pybullet \
     apt-get install -y --no-install-recommends \
         bash-completion \
@@ -21,6 +21,7 @@ RUN apt-get update && \
         gdb \
         git \
         nano \
+        wget \
         openssh-client \
         python3-colcon-argcomplete \
         python3-colcon-common-extensions \
@@ -28,7 +29,23 @@ RUN apt-get update && \
         vim \
         apt-utils \
         python3-pip \
-    && python3 -m pip install pybullet \
+
+        # for anygrasp and pyenv
+        dialog \
+        net-tools \
+        build-essential \
+        libncurses-dev \
+        libreadline-dev \
+        libbz2-dev \
+        tk-dev \
+        liblzma-dev \
+        libffi-dev \
+        libsqlite3-dev \
+
+    && wget http://archive.ubuntu.com/ubuntu/pool/main/o/openssl/libssl1.1_1.1.1f-1ubuntu2_amd64.deb \
+    && sudo dpkg -i libssl1.1_1.1.1f-1ubuntu2_amd64.deb \
+    && rm libssl1.1_1.1.1f-1ubuntu2_amd64.deb \
+
     && apt-get clean \
     && rm -rf /var/lib/apt/lists/*
 
@@ -93,6 +110,28 @@ RUN sudo chown -R $USERNAME:$USERNAME /ros2_ws \
     && rm -rf /home/$USERNAME/.ros \
     && rm -rf src \
     && mkdir -p src
+
+# Init pyenv
+RUN curl -fsSL https://pyenv.run | bash
+ENV PYENV_ROOT="/home/$USERNAME/.pyenv"
+ENV PATH="$PYENV_ROOT/bin:$PYENV_ROOT/shims:${PATH}"
+RUN echo 'eval "$(pyenv init --path)"' >> ~/.bashrc
+
+# Install python 3.8
+RUN pyenv install 3.8
+RUN pyenv global 3.8
+
+# Packages to install for Python 3.8
+RUN python -m pip install --upgrade pip
+RUN python -m pip install \
+    torch \
+    numpy==1.24.0 \
+    open3d
+
+RUN echo 'export PYENV_ROOT="$HOME/.pyenv"' >> ~/.bashrc && \
+    echo 'export PATH="$PYENV_ROOT/bin:$PYENV_ROOT/shims:$PATH"' >> ~/.bashrc && \
+    echo 'eval "$(pyenv init --path)"' >> ~/.bashrc && \
+    echo 'eval "$(pyenv init -)"' >> ~/.bashrc
 
 COPY ./franka_entrypoint.sh /franka_entrypoint.sh
 RUN sudo chmod +x /franka_entrypoint.sh
