tweaked dockerfiles to work with refactorings

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,12 +1,12 @@
 services:
-  franka_ros2:
+  hts_robotics:
     build:
       context: .
       dockerfile: Dockerfile
       args:
         - USER_UID=${USER_UID}
         - USER_GID=${USER_GID}
-    container_name: franka_ros2
+    container_name: hts_robotics
     network_mode: "host"
     privileged: true
     command: /bin/bash
