--- a/hts_robotics/config/controllers.yaml
+++ b/hts_robotics/config/controllers.yaml
@@ -22,10 +22,8 @@ franka_robot_state_broadcaster:
 fr3_arm_controller:
   ros__parameters:
     type: joint_trajectory_controller/JointTrajectoryController
-    gazebo: true
     command_interfaces:
-      # - effort
-      - position
+      - effort
     state_interfaces:
       - position
       - velocity
@@ -37,12 +35,4 @@ fr3_arm_controller:
       - fr3_joint5
       - fr3_joint6
       - fr3_joint7
-    gains:
-      fr3_joint1: { p: 600., d: 30., i: 0., i_clamp: 1. }
-      fr3_joint2: { p: 600., d: 30., i: 0., i_clamp: 1. }
-      fr3_joint3: { p: 600., d: 30., i: 0., i_clamp: 1. }
-      fr3_joint4: { p: 600., d: 30., i: 0., i_clamp: 1. }
-      fr3_joint5: { p: 250., d: 10., i: 0., i_clamp: 1. }
-      fr3_joint6: { p: 150., d: 10., i: 0., i_clamp: 1. }
-      fr3_joint7: { p: 50., d: 5., i: 0., i_clamp: 1. }
 
