trial position controller for gripper

--- a/hts_robotics/CMakeLists.txt
+++ b/hts_robotics/CMakeLists.txt
@@ -18,6 +18,8 @@ rosidl_generate_interfaces(${PROJECT_NAME}
   "action/MoveToPoint.action"
   "action/MoveTarget.action"
   "action/PickUpTarget.action"
+  "action/GripperClose.action"
+  "action/GripperOpen.action"
   DEPENDENCIES geometry_msgs
 )
 
