--- a/hts_robotics/config/simple_controllers.yaml
+++ b/hts_robotics/config/simple_controllers.yaml
@@ -1,6 +1,30 @@
 controller_names:
   - fr3_arm_controller
-  - fr3_gripper
+  # - fr3_gripper_controller
+  # - gripper_example_controller
+  - gripper_position_controller
+  # - fr3_gripper
+
+gripper_position_controller:
+  type: FollowJointTrajectory
+  action_ns: follow_joint_trajectory
+  default: true
+  joints:
+    - fr3_finger_joint1
+    - fr3_finger_joint2
+
+# gripper_example_controller:
+#   type: franka_example_controllers/GripperExampleController
+#   action_ns: franka_gripper
+#   joints:
+#     - fr3_finger_joint1
+
+# fr3_gripper:
+#     action_ns: gripper_action
+#     type: GripperCommand
+#     default: true
+#     joints:
+#       - fr3_finger_joint1
 
 fr3_arm_controller:
   action_ns: follow_joint_trajectory
@@ -14,11 +38,3 @@ fr3_arm_controller:
     - fr3_joint5
     - fr3_joint6
     - fr3_joint7
-
-fr3_gripper:
-    action_ns: gripper_action
-    type: GripperCommand
-    default: true
-    joints:
-      - fr3_finger_joint1
-      - fr3_finger_joint2
