got the gripper moving

--- a/hts_robotics/config/ompl_planning.yaml
+++ b/hts_robotics/config/ompl_planning.yaml
@@ -28,6 +28,7 @@ planner_configs:
     type: geometric::RRT
     range: 0.0  # Max motion added to tree. ==> maxDistance_ default: 0.0, if 0.0, set on setup()
     goal_bias: 0.05  # When close to goal select goal, with this probability? default: 0.05
+    enforce_joint_model_state_space: true
   RRTConnectkConfigDefault:
     type: geometric::RRTConnect
     range: 0.0  # Max motion added to tree. ==> maxDistance_ default: 0.0, if 0.0, set on setup()
