--- a/hts_robotics/config/controllers.yaml
+++ b/hts_robotics/config/controllers.yaml
@@ -14,12 +14,6 @@ controller_manager:
     gripper_position_controller:
       type: joint_trajectory_controller/JointTrajectoryController
 
-    # gripper_example_controller:
-    #   type: franka_example_controllers/GripperExampleController
-
-    # fr3_gripper:
-    #   type: position_controllers/GripperActionController
-
 franka_robot_state_broadcaster:
   ros__parameters:
     lock_try_count: 5 # Number of attempts to acquire the lock in a single on_update()
@@ -32,44 +26,18 @@ gripper_position_controller:
     type: joint_trajectory_controller/JointTrajectoryController
     gazebo: true
     default: true
-    # allow_nonzero_velocity_at_trajectory_end: false
+    allow_nonzero_velocity_at_trajectory_end: false
     command_interfaces:
-      # - effort
-      - position
+      - effort
+      # - position
     state_interfaces:
       - position
       - velocity
     joints:
       - fr3_finger_joint1
-      - fr3_finger_joint2
-
-# gripper_example_controller:
-#   ros__parameters:
-#     type: franka_example_controllers/GripperExampleController
-#     gazebo: true
-#     allow_nonzero_velocity_at_trajectory_end: false
-#     command_interfaces:
-#       - effort
-#       # - position
-#     state_interfaces:
-#       - position
-#       - velocity
-#     joints:
-#       - fr3_finger_joint1
-
-# fr3_gripper:
-#   ros__parameters:
-#     type: position_controllers/GripperActionController
-#     gazebo: true
-#     allow_nonzero_velocity_at_trajectory_end: false
-#     command_interfaces:
-#       - effort
-#       # - position
-#     state_interfaces:
-#       - position
-#       - velocity
-#     joints:
-#       - fr3_finger_joint1
+      # - fr3_finger_joint2
+    gains:
+      fr3_finger_joint1: { ff_velocity_scale: 1., p: 600., d: 30., i: 0., i_clamp: 1. }
 
 
 fr3_arm_controller:
