--- a/hts_robotics/config/kinematics.yaml
+++ b/hts_robotics/config/kinematics.yaml
@@ -2,3 +2,8 @@ fr3_arm:
   kinematics_solver: lma_kinematics_plugin/LMAKinematicsPlugin
   kinematics_solver_search_resolution: 0.005
   kinematics_solver_timeout: 0.005
+
+fr3_gripper:
+  kinematics_solver: lma_kinematics_plugin/LMAKinematicsPlugin
+  kinematics_solver_search_resolution: 0.005
+  kinematics_solver_timeout: 0.005
