--- a/hts_robotics/config/ompl_planning.yaml
+++ b/hts_robotics/config/ompl_planning.yaml
@@ -124,7 +124,7 @@ planner_configs:
   TrajOptDefault:
     type: geometric::TrajOpt
 
-panda_arm:
+fr3_arm:
   planner_configs:
     - SBLkConfigDefault
     - ESTkConfigDefault
@@ -150,7 +150,7 @@ panda_arm:
     - SPARSkConfigDefault
     - SPARStwokConfigDefault
     - TrajOptDefault
-panda_arm_hand:
+fr3_arm_hand:
   planner_configs:
     - SBLkConfigDefault
     - ESTkConfigDefault
