--- a/anygrasp_env.yaml
+++ b/anygrasp_env.yaml
@@ -68,7 +68,7 @@ dependencies:
       - fsspec==2025.3.0
       - future==1.0.0
       - grasp-nms==1.0.2
-      - graspnetapi==1.2.11
+      # - graspnetapi==1.2.11
       - h5py==3.11.0
       - idna==3.11
       - imageio==2.35.1
@@ -88,7 +88,7 @@ dependencies:
       - markupsafe==2.1.5
       - matplotlib==3.7.5
       - matplotlib-inline==0.1.7
-      - minkowskiengine==0.5.4
+      # - minkowskiengine==0.5.4
       - mpmath==1.3.0
       - multiprocess==0.70.18
       - narwhals==1.42.1
@@ -96,18 +96,6 @@ dependencies:
       - nest-asyncio==1.6.0
       - networkx==3.1
       - numpy==1.23.5
-      - nvidia-cublas-cu12==12.1.3.1
-      - nvidia-cuda-cupti-cu12==12.1.105
-      - nvidia-cuda-nvrtc-cu12==12.1.105
-      - nvidia-cuda-runtime-cu12==12.1.105
-      - nvidia-cudnn-cu12==9.1.0.70
-      - nvidia-cufft-cu12==11.0.2.54
-      - nvidia-curand-cu12==10.3.2.106
-      - nvidia-cusolver-cu12==11.4.5.107
-      - nvidia-cusparse-cu12==12.1.0.106
-      - nvidia-nccl-cu12==2.20.5
-      - nvidia-nvjitlink-cu12==12.9.86
-      - nvidia-nvtx-cu12==12.1.105
       - open3d==0.19.0
       - opencv-python==4.12.0.88
       - packaging==25.0
@@ -119,7 +107,7 @@ dependencies:
       - pkgutil-resolve-name==1.3.10
       - platformdirs==4.3.6
       - plotly==6.5.0
-      - pointnet2==0.0.0
+      # - pointnet2==0.0.0
       - prompt-toolkit==3.0.52
       - ptyprocess==0.7.0
       - pure-eval==0.2.3
@@ -147,7 +135,7 @@ dependencies:
       - sympy==1.13.3
       - threadpoolctl==3.5.0
       - tifffile==2023.7.10
-      - torch==2.4.1
+      # - torch==2.4.1
       - tqdm==4.67.1
       - traitlets==5.14.3
       - transforms3d==0.3.1
