--- a/.gitmodules
+++ b/.gitmodules
@@ -3,7 +3,7 @@
 	url = git@github.com:frankarobotics/franka_ros2.git #v2.1.0
 [submodule "franka_description"]
 	path = franka_description
-	url = git@github.com:tranjamin/franka_description.git #v1.0
+	url = git@github.com:tranjamin/franka_description.git #5fcfc9b
 [submodule "realsense2_description"]
 	path = realsense2_description
 	url = git@github.com:issaiass/realsense2_description.git
