--- a/hts_robotics/package.xml
+++ b/hts_robotics/package.xml
@@ -15,6 +15,7 @@
   <depend>rclcpp</depend>
   <depend>std_msgs</depend>
   <depend>moveit_ros_planning_interface</depend>
+  <depend>moveit_ros_planning</depend>
   <depend>geometry_msgs</depend>
   <depend>sensor_msgs</depend>
   <depend>rosidl_default_generators</depend>
