hotfix dockerfile, add gpu passthrough and add camera to rviz

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -28,3 +28,10 @@ services:
       rtprio: 99
       rttime: -1
       memlock: 8428281856
+    deploy:
+      resources:
+        reservations:
+          devices:
+            - driver: nvidia
+              count: 1
+              capabilities: [gpu]
