modify dockerfiles and add anygrasp nodes into package

--- a/docker-compose-cuda.yml
+++ b/docker-compose-cuda.yml
@@ -2,7 +2,7 @@ services:
   hts_robotics:
     build:
       context: .
-      dockerfile: Dockerfile
+      dockerfile: CUDADockerfile
       args:
         - USER_UID=${USER_UID}
         - USER_GID=${USER_GID}
