--- a/hts_robotics/package.xml
+++ b/hts_robotics/package.xml
@@ -21,6 +21,9 @@
   <depend>rosidl_default_generators</depend>
   <depend>rosidl_default_runtime</depend>
 
+  <exec_depend>hts_anygrasp</exec_depend>
+  <depend>hts_msgs</depend>
+
   <member_of_group>rosidl_interface_packages</member_of_group>
 
   <exec_depend>franka_hardware</exec_depend>
