--- a/hts_robotics/config/sensors_kinect_pointcloud.yaml
+++ b/hts_robotics/config/sensors_kinect_pointcloud.yaml
@@ -1,20 +1,9 @@
 sensors:
   - point_cloud_camera
-  # - point_cloud_camera_sim
-
-# point_cloud_camera:
-#   sensor_plugin: occupancy_map_monitor/PointCloudOctomapUpdater
-#   point_cloud_topic: /camera/camera/depth/color/points
-#   max_range: 1.0
-#   point_subsample: 1
-#   padding_offset: 0.1
-#   padding_scale: 1.0
-#   max_update_rate: 1.0
-#   filtered_cloud_topic: filtered_cloud
   
 point_cloud_camera:
   sensor_plugin: occupancy_map_monitor/PointCloudOctomapUpdater
-  point_cloud_topic: /custom_topic/color/points
+  point_cloud_topic: /camera_sim/points
   max_range: 5.0
   point_subsample: 1
   padding_offset: 0.1
