update type of some services, move target generation into config files

--- a/hts_msgs/CMakeLists.txt
+++ b/hts_msgs/CMakeLists.txt
@@ -5,11 +5,13 @@ project(hts_msgs)
 
 find_package(ament_cmake REQUIRED)
 find_package(rosidl_default_generators REQUIRED)
+find_package(geometry_msgs REQUIRED)
 
 # Generate services
 rosidl_generate_interfaces(${PROJECT_NAME}
   "srv/RequestGrasp.srv"
   "srv/DisplayCloud.srv"
+  DEPENDENCIES geometry_msgs
 )
 
 ament_package()
