created entire grasping pipeline

--- a/hts_robotics/CMakeLists.txt
+++ b/hts_robotics/CMakeLists.txt
@@ -23,6 +23,7 @@ rosidl_generate_interfaces(${PROJECT_NAME}
   "action/PickUpTarget.action"
   "action/GripperClose.action"
   "action/GripperOpen.action"
+  "action/GraspObject.action"
   DEPENDENCIES geometry_msgs
 )
 
