--- a/hts_robotics/config/target_objects.yaml
+++ b/hts_robotics/config/target_objects.yaml
@@ -1,12 +1,13 @@
 objects:
   - object_0
+  - object_1
 
 object_0:
   object_id: 0
   geometry_file: "box.sdf"
-  x: 0.2
-  y: 0.2
-  z: 0.2
+  x: 0.4
+  y: -0.2
+  z: 0.025
   R: 0.0
   P: 0.0
   Y: 0.0
@@ -15,3 +16,17 @@ object_0:
     x: 0.05
     y: 0.05
     z: 0.05
+
+object_1:
+  object_id: 1
+  geometry_file: "cylinder.sdf"
+  x: 0.6
+  y: 0.0
+  z: 0.05
+  R: 0.0
+  P: 0.0
+  Y: 0.0
+  primitive_type: CYLINDER # or SPHERE, CYLINDER, CONE
+  primitive_dims:
+    radius: 0.035
+    height: 0.1
