--- a/hts_robotics/config/anygrasp_params.yaml
+++ b/hts_robotics/config/anygrasp_params.yaml
@@ -25,8 +25,8 @@ max_gripper_width: 0.1
 gripper_height: 0.03
 
 no_rgb: True
-pointcloud_topic: "/octomap_point_cloud_centres"
+pointcloud_topic: "/octomap_point_cloud_centers"
 visualise: True
 
-pointcloud_from_file: True
+pointcloud_from_file: False
 pointcloud_file: "/ros2_ws/src/full_cloud_1771641840.npz"
