--- a/hts_robotics/config/target_objects.yaml
+++ b/hts_robotics/config/target_objects.yaml
@@ -1,7 +1,7 @@
 objects:
-  - object_0
+  # - object_0
   - object_1
-  - object_2
+  # - object_2
 
 object_0:
   object_id: 0
@@ -30,7 +30,7 @@ object_1:
   primitive_type: CYLINDER # or SPHERE, CYLINDER, CONE
   primitive_dims:
     radius: 0.03
-    height: 0.1
+    height: 0.2
 
 object_2:
   object_id: 2
