--- a/hts_robotics/config/anygrasp_params.yaml
+++ b/hts_robotics/config/anygrasp_params.yaml
@@ -29,5 +29,5 @@ no_rgb: True
 pointcloud_topic: "/octomap_point_cloud_centers"
 visualise: True
 
-pointcloud_from_file: True
+pointcloud_from_file: False
 pointcloud_file: "/ros2_ws/src/full_cloud_flasks.npz"
