--- a/hts_robotics/config/target_objects.yaml
+++ b/hts_robotics/config/target_objects.yaml
@@ -2,9 +2,9 @@ objects:
   - box
   - cylinder
   - sphere
-  - conic_flask
-  - round_bottomed_flask
-  - volumetric_flask
+  # - conic_flask
+  # - round_bottomed_flask
+  # - volumetric_flask
 
 box:
   object_id: 0
