--- a/hts_moveit_config/config/hard_joint_limits.yaml
+++ b/hts_moveit_config/config/hard_joint_limits.yaml
@@ -4,49 +4,49 @@
 # Joint limits set from this config: https://frankaemika.github.io/docs/control_parameters.html
 
 joint_limits:
-  panda_joint1:
+  fr3_joint1:
     has_velocity_limits: true
     max_velocity: 2.1750
     has_acceleration_limits: true
     max_acceleration: 15.0
     has_jerk_limits: true
     max_jerk: 300.0
-  panda_joint2:
+  fr3_joint2:
     has_velocity_limits: true
     max_velocity: 2.1750
     has_acceleration_limits: true
     max_acceleration: 7.5
     has_jerk_limits: true
     max_jerk: 300.0
-  panda_joint3:
+  fr3_joint3:
     has_velocity_limits: true
     max_velocity: 2.1750
     has_acceleration_limits: true
     max_acceleration: 10.0
     has_jerk_limits: true
     max_jerk: 300.0
-  panda_joint4:
+  fr3_joint4:
     has_velocity_limits: true
     max_velocity: 2.1750
     has_acceleration_limits: true
     max_acceleration: 12.5
     has_jerk_limits: true
     max_jerk: 300.0
-  panda_joint5:
+  fr3_joint5:
     has_velocity_limits: true
     max_velocity: 2.6100
     has_acceleration_limits: true
     max_acceleration: 15.0
     has_jerk_limits: true
     max_jerk: 300.0
-  panda_joint6:
+  fr3_joint6:
     has_velocity_limits: true
     max_velocity: 2.6100
     has_acceleration_limits: true
     max_acceleration: 20.0
     has_jerk_limits: true
     max_jerk: 300.0
-  panda_joint7:
+  fr3_joint7:
     has_velocity_limits: true
     max_velocity: 2.6100
     has_acceleration_limits: true
