--- a/hts_moveit_config/config/joint_limits.yaml
+++ b/hts_moveit_config/config/joint_limits.yaml
@@ -3,49 +3,49 @@
 # Joint limits can be turned off with [has_velocity_limits, has_acceleration_limits, has_jerk_limits]
 
 joint_limits:
-  panda_joint1:
+  fr3_joint1:
     has_velocity_limits: true
     max_velocity: 2.1750
     has_acceleration_limits: true
     max_acceleration: 3.75
     has_jerk_limits: true
     max_jerk: 300.0
-  panda_joint2:
+  fr3_joint2:
     has_velocity_limits: true
     max_velocity: 2.1750
     has_acceleration_limits: true
     max_acceleration: 1.875
     has_jerk_limits: true
     max_jerk: 300.0
-  panda_joint3:
+  fr3_joint3:
     has_velocity_limits: true
     max_velocity: 2.1750
     has_acceleration_limits: true
     max_acceleration: 2.5
     has_jerk_limits: true
     max_jerk: 300.0
-  panda_joint4:
+  fr3_joint4:
     has_velocity_limits: true
     max_velocity: 2.1750
     has_acceleration_limits: true
     max_acceleration: 3.125
     has_jerk_limits: true
     max_jerk: 300.0
-  panda_joint5:
+  fr3_joint5:
     has_velocity_limits: true
     max_velocity: 2.6100
     has_acceleration_limits: true
     max_acceleration: 3.75
     has_jerk_limits: true
     max_jerk: 300.0
-  panda_joint6:
+  fr3_joint6:
     has_velocity_limits: true
     max_velocity: 2.6100
     has_acceleration_limits: true
     max_acceleration: 5.0
     has_jerk_limits: true
     max_jerk: 300.0
-  panda_joint7:
+  fr3_joint7:
     has_velocity_limits: true
     max_velocity: 2.6100
     has_acceleration_limits: true
