--- a/hts_moveit_config/config/ros2_controllers.yaml
+++ b/hts_moveit_config/config/ros2_controllers.yaml
@@ -21,13 +21,13 @@ panda_arm_controller:
       - position
       - velocity
     joints:
-      - panda_joint1
-      - panda_joint2
-      - panda_joint3
-      - panda_joint4
-      - panda_joint5
-      - panda_joint6
-      - panda_joint7
+      - fr3_joint1
+      - fr3_joint2
+      - fr3_joint3
+      - fr3_joint4
+      - fr3_joint5
+      - fr3_joint6
+      - fr3_joint7
     allow_nonzero_velocity_at_trajectory_end: true
 
 panda_hand_controller:
