--- a/hts_moveit_config/config/ompl_planning.yaml
+++ b/hts_moveit_config/config/ompl_planning.yaml
@@ -143,7 +143,7 @@ planner_configs:
   TrajOptDefault:
     type: geometric::TrajOpt
 
-panda_arm:
+fr3_arm:
   planner_configs:
     - APSConfigDefault
     - SBLkConfigDefault
@@ -170,7 +170,7 @@ panda_arm:
     - SPARSkConfigDefault
     - SPARStwokConfigDefault
     - TrajOptDefault
-panda_arm_hand:
+fr3_arm_hand:
   planner_configs:
     - APSConfigDefault
     - SBLkConfigDefault
