--- a/hts_moveit_config/config/gripper_moveit_controllers.yaml
+++ b/hts_moveit_config/config/gripper_moveit_controllers.yaml
@@ -8,10 +8,10 @@ moveit_controller_manager: moveit_simple_controller_manager/MoveItSimpleControll
 
 moveit_simple_controller_manager:
   controller_names:
-    - panda_arm_controller
-    - panda_hand_controller
+    - fr3_arm_controller
+    - fr3_hand_controller
 
-  panda_arm_controller:
+  fr3_arm_controller:
     action_ns: follow_joint_trajectory
     type: FollowJointTrajectory
     default: true
@@ -24,9 +24,9 @@ moveit_simple_controller_manager:
       - fr3_joint6
       - fr3_joint7
 
-  panda_hand_controller:
+  fr3_hand_controller:
     action_ns: gripper_cmd
     type: GripperCommand
     default: true
     joints:
-      - panda_finger_joint1
+      - fr3_finger_joint1
