--- a/hts_moveit_config/config/hard_joint_limits.yaml
+++ b/hts_moveit_config/config/hard_joint_limits.yaml
@@ -53,14 +53,14 @@ joint_limits:
     max_acceleration: 20.0
     has_jerk_limits: true
     max_jerk: 300.0
-  panda_finger_joint1:
+  fr3_finger_joint1:
     has_velocity_limits: true
     max_velocity: 0.1
     has_acceleration_limits: true
     max_acceleration: 1.0
     has_jerk_limits: true
     max_jerk: 300.0
-  panda_finger_joint2:
+  fr3_finger_joint2:
     has_velocity_limits: true
     max_velocity: 0.1
     has_acceleration_limits: true
