--- a/hts_moveit_config/config/moveit_controllers.yaml
+++ b/hts_moveit_config/config/moveit_controllers.yaml
@@ -9,9 +9,9 @@ moveit_controller_manager: moveit_simple_controller_manager/MoveItSimpleControll
 
 moveit_simple_controller_manager:
   controller_names:
-    - panda_arm_controller
+    - fr3_arm_controller
 
-  panda_arm_controller:
+  fr3_arm_controller:
     action_ns: follow_joint_trajectory
     type: FollowJointTrajectory
     default: true
