--- a/hts_moveit_config/config/ros2_controllers.yaml
+++ b/hts_moveit_config/config/ros2_controllers.yaml
@@ -3,17 +3,17 @@ controller_manager:
   ros__parameters:
     update_rate: 100  # Hz
 
-    panda_arm_controller:
+    fr3_arm_controller:
       type: joint_trajectory_controller/JointTrajectoryController
 
-    panda_hand_controller:
+    fr3_hand_controller:
       type: position_controllers/GripperActionController
 
     joint_state_broadcaster:
       type: joint_state_broadcaster/JointStateBroadcaster
 
 
-panda_arm_controller:
+fr3_arm_controller:
   ros__parameters:
     command_interfaces:
       - position
@@ -30,6 +30,6 @@ panda_arm_controller:
       - fr3_joint7
     allow_nonzero_velocity_at_trajectory_end: true
 
-panda_hand_controller:
+fr3_hand_controller:
   ros__parameters:
-    joint: panda_finger_joint1
+    joint: fr3_finger_joint1
