--- a/hts_moveit_config/config/gripper_moveit_controllers.yaml
+++ b/hts_moveit_config/config/gripper_moveit_controllers.yaml
@@ -1,32 +1,34 @@
 # MoveIt uses this configuration for controller management
 trajectory_execution:
+  moveit_manage_controllers: true
   allowed_execution_duration_scaling: 1.2
-  allowed_goal_duration_margin: 0.5
+  allowed_goal_duration_margin: 0.05
   allowed_start_tolerance: 0.01
+  execution_duration_monitoring: true
 
-moveit_controller_manager: moveit_simple_controller_manager/MoveItSimpleControllerManager
+# moveit_controller_manager: moveit_simple_controller_manager/MoveItSimpleControllerManager
 
-moveit_simple_controller_manager:
-  controller_names:
-    - fr3_arm_controller
-    - fr3_hand_controller
+# moveit_simple_controller_manager:
+#   controller_names:
+#     - fr3_arm_controller
+#     - fr3_hand_controller
 
-  fr3_arm_controller:
-    action_ns: follow_joint_trajectory
-    type: FollowJointTrajectory
-    default: true
-    joints:
-      - fr3_joint1
-      - fr3_joint2
-      - fr3_joint3
-      - fr3_joint4
-      - fr3_joint5
-      - fr3_joint6
-      - fr3_joint7
+#   fr3_arm_controller:
+#     action_ns: follow_joint_trajectory
+#     type: FollowJointTrajectory
+#     default: true
+#     joints:
+#       - fr3_joint1
+#       - fr3_joint2
+#       - fr3_joint3
+#       - fr3_joint4
+#       - fr3_joint5
+#       - fr3_joint6
+#       - fr3_joint7
 
-  fr3_hand_controller:
-    action_ns: gripper_cmd
-    type: GripperCommand
-    default: true
-    joints:
-      - fr3_finger_joint1
+#   fr3_hand_controller:
+#     action_ns: gripper_cmd
+#     type: GripperCommand
+#     default: true
+#     joints:
+#       - fr3_finger_joint1
